added menu button example and update links in aria practices

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1951,8 +1951,8 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="examples/menu-button/menu-button-1.html">Menu button role example</a></li>
-        </ul>
+          <li><a href="examples/menu-button/menu-button-1.html">Menu button with popup menu for actions</a></li>
+          <li><a href="examples/menu-button/menu-button-2.html">Menu button with popup menu for links</a></li>
       </section>
     </section>
 
