--- a/aria-practices.html
+++ b/aria-practices.html
@@ -370,6 +370,12 @@
             attribute should be used to define a <code>banner</code> landmark.</p>
 
         </section>
+
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/banner.html">Banner Landmark Example</a></p>
+        </section>
+
       </section>
 
       <section id="aria_lh_complementary">
@@ -399,6 +405,12 @@
             <p>If the HTML5 <code>aside</code> element technique is not being used, use a
             <code>role=&quot;complementary&quot;</code> attribute to define a <code>complementary</code> landmark.</p>
         </section>
+
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/complementary.html">Complementary Landmark Example</a></p>
+        </section>
+
       </section>
 
       <section id="aria_lh_contentinfo">
@@ -445,6 +457,12 @@
             <p>If the HTML5 <code>footer</code> element technique is not being used, a <code>role=&quot;contentinfo&quot;</code>
             attribute should be used to define a <code>contentinfo</code> landmark.</p>
           </section>
+
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/contentinfo.html">Contentinfo Landmark Example</a></p>
+        </section>
+
           </section>
 
           <section id="aria_lh_form">
@@ -484,15 +502,15 @@
 
               <h5>HTML5 Techniques</h5>
 
-              <ul>
-                <li>The <code>role=&quot;form&quot;</code> attribute defines a form landmark.</li>
-
-                <li>There is no HTML5 element that defines a <code>form</code> landmark.</li>
-                </ul>
+              <p>The HTML5 <code>form</code> element that defines a <code>form</code> landmark when it has an accessible name (e.g. <code>aria-labelledby</code>, <code>aria-label</code> or <code>title</code>).</p>
               <h5>ARIA Technique</h5>
                 <p>Use the <code>role=&quot;form&quot;</code> to identify a region of the page; do not use it to identify every
                 form field.</p>
             </section>
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/form.html">Form Landmark Example</a></p>
+        </section>
           </section>
 
           <section id="aria_lh_main">
@@ -525,6 +543,11 @@
                 <p>If the HTML5 <code>main</code> element technique is not being used, use a <code>role=&quot;main&quot;</code>
                 attribute to define a <code>main</code> landmark.</p>
             </section>
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/main.html">Main Landmark Example</a></p>
+        </section>
+
           </section>
 
           <section id="aria_lh_navigation">
@@ -551,6 +574,11 @@
                 <p>If the HTML5 <code>nav</code> element technique is not being used, use a
                 <code>role=&quot;navigation&quot;</code> attribute to define a <code>navigation</code> landmark.</p>
             </section>
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/navigation.html">Navigation Landmark Example</a></p>
+        </section>
+
           </section>
 
           <section id="aria_lh_region">
@@ -579,6 +607,11 @@
                 <p>If the HTML5 <code>section</code> element technique is not being used, use a
                 <code>role=&quot;region&quot;</code> attribute to define a <code>region</code> landmark.</p>
             </section>
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/region.html">Region Landmark Example</a></p>
+        </section>
+
           </section>
 
         <section id="aria_lh_search">
@@ -602,6 +635,11 @@
 
               <p>The <code>role=&quot;search&quot;</code> attribute defines a <code>search</code> landmark.</p>
           </section>
+        <section class="notoc">
+          <h5>Examples</h5>
+          <p><a href="examples/landmarks/search.html">Search Landmark Example</a></p>
+        </section>
+
         </section>
       </section>
     </section>
