--- a/examples/landmarks/at.html
+++ b/examples/landmarks/at.html
@@ -51,7 +51,7 @@
             <ul>
               <li><a href="#jaws">JAWS Screen Reader for Windows</a></li>
               <li><a href="#nvda">NVDA Screen Reader for Windows</a></li>
-              <li><a href="#vo">Vioce Over Screen Reader for OSX</a></li>
+              <li><a href="#vo">Voice Over Screen Reader for OSX</a></li>
               <li><a href="#orca">ORCA Screen Reader for Linux/Gnome</a></li>
             </ul>
 
