added visual aria reference

--- a/examples/landmarks/resources.html
+++ b/examples/landmarks/resources.html
@@ -65,6 +65,7 @@
 
                           <ul>
                             <li><a href="http://accessibility-bookmarklets.org/">Accessibility Bookmarklets</a></li>
+                            <li><a href="http://whatsock.com/training/matrices/visual-aria.htm">The Visual ARIA Bookmarklet</a></li>
                             <li><a href="http://paypal.github.io/skipto/">SkipTo, version 2.0</a> (PayPal)</li>
                           </ul>
 
