--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3187,9 +3187,17 @@ function detectHiContrast() {
   <h2> Developing a Keyboard Interface</h2>
   <p>
   Unlike native HTML form elements, browsers do not provide keyboard support for graphical user interface (GUI) components that are made accessible with ARIA; authors must provide the keyboard support in their code.
-  This section describes how to make the functionality of a web page that includes ARIA widgets, such as menus and grids,  as wel ass interactive components, such as toolbars and dialogs, operable with a keyboard. 
-  It starts by explaining the basics of focus management between and within widgets and then offers guidance toward the objective of providing people who rely on a keyboard experiences that are as efficient and enjoyable as the those available to others.
+  This section describes the principles and methods for making the functionality of a web page that includes ARIA widgets, such as menus and grids,  as wel ass interactive components, such as toolbars and dialogs, operable with a keyboard. 
+  Along with the basics of focus management, this section offers guidance toward the objective of providing experiences to people who rely on a keyboard that are as efficient and enjoyable as the experiences available to others. 
+  It covers:
   </p>
+  <ol>
+  <li>Managing movement of keyboard focus between components, e.g., how the focus moves when the <kbd>Tab</kbd> and <kbd>Shift+Tab</kbd> keys are pressed. </li>
+  <li>Managing movement of keyboard focus inside components that contain multiple focusable elements, e.g., radio groups, menus, listboxes, trees, and grids. </li>
+  <li>Differences between keyboard focus and the selected state and how to ensure assistive technologies can track both. </li>
+  <li>Assigning and revealing keyboard shortcuts and guidance on overlaps and conflicts with the keyboard commands of assistive technologies, browsers, and operating systems. </li>
+  <li>Managing focus for modal and non-modal dialogs. </li>
+  </ol>
     <section id="kbd_generalnav">
     <h3>Keyboard Navigation Overview</h3>
       <p>
