--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3192,38 +3192,62 @@ function detectHiContrast() {
   It covers:
   </p>
   <ol>
-  <li>Managing movement of keyboard focus between components, e.g., how the focus moves when the <kbd>Tab</kbd> and <kbd>Shift+Tab</kbd> keys are pressed. </li>
-  <li>Managing movement of keyboard focus inside components that contain multiple focusable elements, e.g., radio groups, menus, listboxes, trees, and grids. </li>
-  <li>Differences between keyboard focus and the selected state and how to ensure assistive technologies can track both. </li>
-  <li>Assigning and revealing keyboard shortcuts and guidance on overlaps and conflicts with the keyboard commands of assistive technologies, browsers, and operating systems. </li>
-  <li>Managing focus for modal and non-modal dialogs. </li>
+  <li>An overview of fundamental principles of focus movement conventions used in ARIA design patterns.</li>
+  <li>Maintaining visible focus, predictable focus movement, and distinguishing between keyboard focus and the selected state.</li>
+  <li>Managing movement of keyboard focus between components, e.g., how the focus moves when the <kbd>Tab</kbd> and <kbd>Shift+Tab</kbd> keys are pressed.</li>
+  <li>Managing movement of keyboard focus inside components that contain multiple focusable elements, e.g., two different methods for programatically exposing focus inside widgets like radio groups, menus, listboxes, trees, and grids.</li>
+  <li>Managing focus for modal and non-modal dialogs.</li>
+  <li>Assigning and revealing keyboard shortcuts, including guidance on how to avoid problematic conflicts with keyboard commands of assistive technologies, browsers, and operating systems.</li>
+  <li>Addressing macro navigation concerns, i.e., methods for enabling efficient keyboard access to different sections of a page or site.</li>
   </ol>
     <section id="kbd_generalnav">
-    <h3>Keyboard Navigation Overview</h3>
+    <h3>Overview of Keyboard Navigation Conventions</h3>
       <p>
-      ARIA components model GUI components from popular desktop GUIs, including Microsoft Windows, Mac OS X, and GNOME.
-      So, to facilitate easy learning and efficient operation of keyboard interfaces , the ARIA design patterns borrow user expectations and keyboard conventions from those platforms.
-      Similar to how familiar visual styling helps users learn how to operate a component, ARIA attributes enable screen readers to give components the sound and feel of their desktop counterparts.
-      For example, when screen reader users hear that a tree has focus, they will expect that pressing the right arrow key will expand  a collapsed node. 
+      ARIA roles, states, and properties model accessibility behaviors and features shared among GUI components of popular desktop GUIs, including Microsoft Windows, Mac OS X, and GNOME.
+      Similarly, ARIA design patterns borrow user expectations and keyboard conventions from those platforms, consistently incorporating common conventions with the aim of facilitating easy learning and efficient operation of keyboard interfaces across the web.
       </p>
       <p>
-      The primary keyboard navigation convention common across all platforms is that the <kbdd>tab</kbdd> and <kbd>shift+tab</kbd> keys move focus from one component or widget to another while other keys, primarily the arrow keys, move focus inside of components that include multiple focusable elements.
+      Consistent application of common GUI keyboard interface conventions is particularly important for assistive technology users. 
+      For instance, just as familiar visual styling helps users discover how to operate a component with a mouse, ARIA attributes enable screen readers to give components the sound and feel of their desktop counterparts.
+      For example, when screen reader users hear that a tree has focus, they will commonly expect that pressing the right arrow key will expand  a collapsed node. 
+      </p>
+      <p>
+      A primary keyboard navigation convention common across all platforms is that the <kbdd>tab</kbdd> and <kbd>shift+tab</kbd> keys move focus from one component or widget to another while other keys, primarily the arrow keys, move focus inside of components that include multiple focusable elements.
       The path that the focus follows when pressing the <kbd>tab</kbd> key is known as the tab sequence or tab ring.
       </p>
       <p>
       A component that contains multiple focusable elements is a composite. 
-      Common examples of composite elements are radio groups, tablists, and grids.
+      Common examples of composite elements are radio groups, tablists, menus, and grids.
       A radio group, for example, contains multiple radio buttons. 
       Only one radio button is included in the tab sequence. 
-      After pressing the <kbd>tab</kbd> key moves focus to a radio button in the group, pressing arrow keys moves focus among the radio buttons in the group, and pressing the <kbd>tab</kbd> moves focus out of the radio group to the next element in the tab sequence.
+      After pressing the <kbd>Tab</kbd> key moves focus to a radio button in the group, pressing arrow keys moves focus among the radio buttons in the group, and pressing the <kbd>Tab</kbd> key moves focus out of the radio group to the next element in the tab sequence.
       </p>
+      </section>
+      <section id="keyboard_focus_visible_predictable">
+      <h3>Visible and Predictable Focus </h3>
       <p>
-      Paragraph about importance of visible focus ring and communicating focus ... following is some unedited content moved here from elsewhere: 
-      The element with keyboard focus is essential because it communicates information about the widget to assistive technologies like screen readers and magnifiers through operating specific accessibility APIs like Microsoft Active Accessibility (MSAA), the Apple AX APIs, and the ATK Accessibility Toolkit.
-A tenet of keyboard accessibility is reliable, persistent indication of focus. 
-The author is responsible, in the scripts, for maintaining visual and programmatic focus and observing accessible behavior rules. 
-Screen readers and keyboard-only users rely on focus to operate rich internet applications with the keyboard. 
+      When operating with a keyboard, two essentials of a good experience are the ability to easily discern where the keyboard focus is at any time and the ability to easily discover where it has moved after a navigation key has been pressed.
+      The following factors affect to what extent a web page affords users these capabilities.
       </p>
+      <ol>
+      <li>Visibility of the focus indicator: Users need to be able to easily distinguish the keyboard focus indicator from other features of the visual design. 
+      Just as a mouse user may move the mouse to help find the mouse pointer, a keyboard user may press a navigation key to watch for movement. 
+      If changes are subtle, users will remain lost. 
+      Authors are advised to rely on the default focus indicators provided by browsers. 
+      If overriding the default, consider:
+      <ul>
+      <li>something about ... Colors and gradients can disappear in high contrast modes.</li>
+      <li>... other considerations to be added ... </li>
+      </ul>
+      </li>
+      <li>Persistence of visibility: The focus indicator should always be visible.
+      Authors need to ensure all events that could effect the currently active element are properly managed.
+      For example, if the active element is hidden or removed from the DOM, browsers may move focus to the body element, causing the focus indicator to disappear. 
+      This can also make the result of pressing a navigation key indeterminant, causing head aches not only for visual keyboard users but screen reader users as well.
+      </li>
+      <li>Predictability of movement:... to be written ... 
+      </li>
+      </ol>
       </section>
       <section id="kbd_general_between">
       <h3> Keyboard Navigation between Widgets (tabindex)</h3>
